# DrPO

./: .gitignore  README.md  environment.yml  index.html  pyproject.toml  styles.css
baselines/: README.md  common.py
baselines/dpo/: train_lora.py
baselines/draft/: train_lora.py
baselines/grpo/: losses.py  train_lora.py  trainer.py
baselines/spo/: losses.py  train_lora.py
baselines/vggflow/: reward_gradient.py  train_lora.py
data/: pairs.jsonl
data/prompts/: pickapicv2_test_unique.txt
docs/: inference_and_evaluation.md  sdxl_turbo_training.md  source_layout.md  vggflow_implementation.md
scripts/: check_local_assets.py  download_eval_assets.py  download_mae_latent.py  evaluate_rewards.py  geneval_score_worker.py
scripts/analysis/: build_existing_results_assets.py
scripts/dev/: debug_runtime.py
scripts/env/: pack_conda_env.sh
scripts/experiments/: README.md
scripts/inference/: evaluate_samples.sh  sample_sdturbo_baseline.sh  sample_sdturbo_geneval_budget.sh  sample_sdturbo_lora.sh
scripts/profiling/: profile_hpsv3_speed.py  train_hpsv3_wallclock_ddp.py
tests/: test_config.py  test_data_paths_assets.py  test_drift.py  test_geneval_layout.py  test_geneval_worker.py  test_inference.py  test_method_layout.py  test_metrics_core_integration.py  test_neighbor_grpo.py  test_online_prompt_animals.py  test_real_gpu_models.py  test_rewards_sdturbo.py  test_script_cleanliness.py  test_sdturbo_core_integration.py  test_sdxl_drpo_config.py  test_spo.py  test_tensors.py  test_trainer_config.py  test_training_selection_config.py  test_vggflow.py
website/: index.html  styles.css
(+80 files in other folders)
