[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drpo"
version = "0.1.0"
description = "Drifting Preference Optimization for one-step text-to-image diffusion models."
readme = "README.md"
requires-python = ">=3.10,<3.13"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
